--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Adil Muhammed A S</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
+      <p><span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
       <div class="social-links">
         <a href="https://www.instagram.com/tis.adil/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/adil-muhammed-a-s-469069228" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
